# AI_traffic_analysis

./: .gitignore  README.md  pyproject.toml
src/: consts.py  main.py
